# Moka

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
android/: build.gradle.kts  (+1 more)
app/: BUILD.bazel  build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
app/sampledata/: issue.json  issue_timeline.json  language.json  notification.json  project.json  pull_request.json  repository.json  repository_topic.json  user.json
app/schemas/io.github.tonnyl.moka.db.MokaDataBase/: 1.json  2.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: github.css  github_dark.css  github_light.css  github_release_dark.css  github_release_light.css  intercept-hash.js  languages.json
app/src/main/graphql/: schema.json
app/src/main/graphql/interfaces/: GitObject.graphql  Reactable.graphql  RepositoryOwner.graphql
app/src/main/graphql/mutations/: AddReaction.graphql  AddStar.graphql  CloseIssue.graphql  DeleteIssue.graphql  DeleteProject.graphql  DeleteProjectCard.graphql  DeleteProjectColumn.graphql  DeletePullRequestReview.graphql  DeletePullRequestReviewComment.graphql  DeleteRef.graphql  FollowUser.graphql  MergeBranch.graphql  MergePullRequest.graphql  ReopenIssue.graphql  ReopenPullRequest.graphql  RequestReviews.graphql  ResolveReviewThread.graphql  SubmitPullRequestReview.graphql  TransferIssue.graphql  UpdateIssue.graphql  UpdateProjectCard.graphql  UpdatePullRequest.graphql  UpdatePullRequestReview.graphql  UpdatePullRequestReviewComment.graphql  UpdateRef.graphql  UpdateRepository.graphql  UpdateSubscription.graphql
app/src/main/graphql/objects/: AssignedEventFragment.graphql  BaseRefChangedEventFragment.graphql  BaseRefForcePushedEventFragment.graphql  Blob.graphql  CommitListItem.graphql  ConvertedNoteToIssueEventFragment.graphql  CrossReferencedEventFragment.graphql  Gist.graphql  GitActorFragment.graphql  IssueCommentFragment.graphql  IssuePullRequestTimelineItemOrganizationFragment.graphql  IssuePullRequestTimelineItemUserFragment.graphql  LabeledEventFragment.graphql  LanguageEdge.graphql  LicenseRule.graphql  MergedEventFragment.graphql  Milestone.graphql  MilestoneItemPullRequestFragment.graphql  MilestonedEventFragment.graphql  Organization.graphql  PinnedEventFragment.graphql  PullRequestCommitFragment.graphql  PullRequestReviewFragment.graphql  PullRequestTimelineItemPullRequest.graphql  PullRequestTimelineItemRefFragment.graphql  Reaction.graphql  ReactionGroup.graphql  ReadyForReviewEventFragment.graphql  Ref.graphql  ReferencedEventFragment.graphql  ReferencedEventIssueFragment.graphql  ReleaseListItem.graphql  ReopenedEventFragment.graphql  Repository.graphql  RepositoryListItemFragment.graphql  ReviewDismissedEventFragment.graphql  ReviewRequestRemovedEventFragment.graphql  Topic.graphql  Tree.graphql  TreeEntry.graphql  (+3 more)
app/src/main/graphql/queries/: Issue.graphql  IssueTimelineItems.graphql  Issues.graphql  Organization.graphql  OrganizationsProjects.graphql  OrganizationsRepository.graphql  OrganizationsRepositoryDefaultCommits.graphql  OrganizationsRepositoryTopics.graphql  PullRequest.graphql  PullRequestTimelineItems.graphql  Release.graphql  RepositoriesProjects.graphql  Repository.graphql  RepositoryRefs.graphql  RepositoryReleases.graphql  SearchUser.graphql  UsersOwnedRepositories.graphql  UsersProjects.graphql  UsersRepository.graphql  UsersRepositoryDefaultCommits.graphql  UsersRepositoryTopics.graphql  Viewer.graphql
app/src/main/graphql/unions/: Assignee.graphql  PinnableItem.graphql
app/src/main/proto/: account.proto  settings.proto
app/src/main/res/anim/: mtrl_bottom_sheet_slide_in.xml  mtrl_bottom_sheet_slide_out.xml
app/src/main/res/color/: drawer_menu_item_icon.xml  drawer_menu_item_text.xml
app/src/main/res/drawable/: avatar_placeholder.xml  bg_auth_get_started.xml  bg_bottom_app_bar_shadow.xml  bg_issue_timeline_event_2.xml  bg_item_event_repository_card.xml  bg_profile_follow.xml  bg_trending_rank.xml  bg_user_status.xml  bg_user_status_busy.xml  bullet_small.xml  drawer_menu_item_bg.xml  fading_snackbar_background.xml  ic_access_time_black_18.xml  ic_arrow_back_24.xml  ic_arrow_drop_down_24.xml  ic_book_18.xml  ic_book_24.xml  ic_bookmark_24.xml  ic_check_24.xml  ic_code_fork.xml  ic_code_fork_24.xml  ic_code_fork_secondary_text_color_18.xml  ic_commit_24.xml  ic_copy_24dp.xml  ic_dashboard_outline.xml  ic_done_24.xml  ic_dot_24.xml  ic_edit_24.xml  ic_email_24.xml  ic_emoji_emotions_24.xml  ic_emoji_nature_24.xml  ic_eye_18.xml  ic_eye_24.xml  ic_feedback_24.xml  ic_file_download_24.xml  ic_filter_24.xml  ic_folder_24.xml  ic_folder_open_24.xml  ic_help_24.xml  ic_info_24.xml  (+44 more)
app/src/main/res/layout/: activity_auth.xml  activity_main.xml  app_bar_main.xml  appbar_layout.xml  content_main.xml  dialog_fragment_account.xml  dialog_fragment_add_reaction.xml  fading_snackbar_layout.xml  fragment_about.xml  fragment_accounts.xml  fragment_auth.xml  fragment_drafts.xml  fragment_edit_profile.xml  fragment_edit_status.xml  fragment_emojis.xml  fragment_explore.xml  fragment_explore_developers.xml  fragment_explore_filter.xml  fragment_explore_page.xml  fragment_explore_repositories.xml  fragment_gists.xml  fragment_inbox.xml  fragment_issue.xml  fragment_issue_pr.xml  fragment_issues.xml  fragment_list.xml  fragment_main.xml  fragment_notifications.xml  fragment_pr.xml  fragment_profile.xml  fragment_projects.xml  fragment_prs.xml  fragment_repositories.xml  fragment_repository.xml  fragment_search.xml  fragment_search_emoji.xml  fragment_search_page.xml  fragment_searched_repositories.xml  fragment_searched_users.xml  fragment_settings.xml  (+51 more)
app/src/main/res/menu/: activity_main_drawer.xml  fragment_edit_status_clear_when_overflow_menu.xml  fragment_emojis_menu.xml  fragment_profile_option_menu.xml  fragment_repository_menu.xml  main.xml  menu_repository.xml  notification_item_context_menu.xml
app/src/main/res/navigation/: navigation_activity_auth.xml  navigation_activity_main.xml  navigation_fragment_main.xml
(+1254 files in other folders)
